@@ -1,3 +1,7 @@
+2012-11-17  Andreas K. Foerster  <info@akfoerster.de>
+
+	* akfavatar.h, avatar.c (avt_input): new function
+
 2012-11-16  Andreas K. Foerster  <info@akfoerster.de>
 
 	* akfavatar.h, avatar.c (avt_bell_function): new function
